--- a/TTP/TTP.csproj
+++ b/TTP/TTP.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aquality.Selenium" Version="4.22.1" />
+    <PackageReference Include="Aquality.Selenium.Core" Version="3.1.3" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="NUnit" Version="3.14.0" />
