--- a/TTT/TTT.csproj
+++ b/TTT/TTT.csproj
@@ -11,13 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="Aquality.Selenium" Version="4.22.1" />
-    <PackageReference Include="Aquality.Selenium.Core" Version="3.1.3" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.19.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="NunitXml.TestLogger" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
